hphp/test/slow/coeffects/parse-ctx-const-1.php.expectf
Fatal error: Local contexts on ctx constants are not allowed in %s on line 4
